--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,7 +28,7 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      run: mvn -B package/Laborator030424 --file pom.xml
        # Krijimi i imazhit dhe publikimi ne dokerbuh
     - name: Krijo imazh dhe bej push ne dockerhub
       uses: docker/build-push-action@v1  
