--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,6 +28,7 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
+      working-directory: Laborator030424  #Change to your Maven project directory
       run: mvn -B package/Laborator030424 --file pom.xml
        # Krijimi i imazhit dhe publikimi ne dokerbuh
     - name: Krijo imazh dhe bej push ne dockerhub
