--- a/Laborator030424/src/main/resources/application.yml
+++ b/Laborator030424/src/main/resources/application.yml
@@ -4,13 +4,13 @@ spring:
   datasource:
     driver-class-name: org.postgresql.Driver
     url: jdbc:postgresql://snuffleupagus.db.elephantsql.com/dsxkiysx
-    username: cls
-
+    username: dsxkiysx
     password: v9eVGiKAqcu7ny1AcE32zxPQfMiESsHi
   # JPA properties
   jpa:
     hibernate.ddl-auto: update
     database-platform: org.hibernate.dialect.PostgreSQLDialect
+    show-sql: true
 # Server configuration
 server:
   port: 8080
@@ -19,3 +19,13 @@ security:
   user:
     name: user
 password: user
+#Konfigurime te log
+logging:
+  level:
+    root: INFO
+  file:
+    name: ./logs/log-generated.log
+    max-size: 10MB
+    append: true
+  pattern:
+    file: "%d{yyyy-MM-dd HH:mm:ss} - %logger{36} - %msg%n"
