--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -33,7 +33,8 @@ jobs:
        # Krijimi i imazhit dhe publikimi ne dokerbuh
     - name: Krijo imazh dhe bej push ne dockerhub
       uses: docker/build-push-action@v2  
-      with:       
+      with:    
+       dockerfile: ./Laborator030424/dockerfile
        username: ${{secrets.DOCKER_USERNAME}}
        password:  ${{secrets.DOCKERHUB_TOKEN}}
        repository: midjankacirani/cloudappdevelopment
