--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -34,7 +34,7 @@ jobs:
     - name: Krijo imazh dhe bej push ne dockerhub
       uses: docker/build-push-action@v2  
       with:    
-       dockerfile: Laborator030424/Dockerfile
+       dockerfile: ./Laborator030424
        username: ${{secrets.DOCKER_USERNAME}}
        password:  ${{secrets.DOCKERHUB_TOKEN}}
        repository: midjankacirani/cloudappdevelopment
